addCategoryAPI추가
